# zpickle

./: .gitignore  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: pr_check.yml  test_and_package_wheel.yml
benchmarks/: benchmark.py
benchmarks/results/: benchmark_results.csv
tests/: test_basic.py  test_config.py  test_edge_cases.py  test_format.py  test_streaming.py
zpickle/: __init__.py  compat.py  config.py  core.py  exceptions.py  format.py
